# scifi-city-animation

./: CMakeLists.txt  README.md  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
include/: app.hpp  camera_following.hpp  camera_free.hpp  camera_static.hpp  cameras.hpp  common.hpp  lights.hpp  mesh.hpp  model.hpp  scene.hpp  shader.hpp
objects/: Jeep_Renegade_2016.mtl  spaceship.mtl
shaders/: light.fs  shader.fs  shader.vs  shaderFlat.fs  shaderFlat.vs  shaderMain.fs  shaderMain.vs
src/: app.cpp  camera_free.cpp  cameras.cpp  common.cpp  lights.cpp  mesh.cpp  model.cpp  scene.cpp  shader.cpp
